Use feedburner as RSS feed

--- a/_src/_includes/common/head.haml
+++ b/_src/_includes/common/head.haml
@@ -1,6 +1,6 @@
 %meta{:charset => 'utf-8'}
 %link{:href => '/stylesheets/compiled/main.css', :rel => 'stylesheet'}
-%link{:href => "{{ site.base_uri }}/feed.xml", :rel => 'alternate', :type => 'application/rss+xml', :title => 'RSS'}
+%link{:href => "http://feeds.feedburner.com/burgestrand", :rel => 'alternate', :type => 'application/rss+xml', :title => 'RSS'}
 %title {{ page.title }} {{ site.title }}
 
 :javascript
