--- a/_includes/common/head.html
+++ b/_includes/common/head.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 <link href="/stylesheets/compiled/main.css" rel="stylesheet">
-<link href="{{ site.base_uri }}/feed.xml" rel="alternate" title="RSS" type="application/rss+xml">
+<link href="http://feeds.feedburner.com/burgestrand" rel="alternate" title="RSS" type="application/rss+xml">
 <title>{{ page.title }} {{ site.title }}</title>
 <script type="text/javascript">
   //<![CDATA[
