--- a/_includes/common/navigation.html
+++ b/_includes/common/navigation.html
@@ -6,5 +6,10 @@
     <li>
       <a href="/about-me.html">About Me</a>
     </li>
+    <li class="rss">
+      <a href="http://feeds.feedburner.com/burgestrand" rel="alternate" type="application/rss+xml">
+        <img alt="rss icon" src="http://www.feedburner.com/fb/images/pub/feed-icon16x16.png">
+      </a>
+    </li>
   </ul>
 </nav>
