--- a/_src/_includes/common/navigation.haml
+++ b/_src/_includes/common/navigation.haml
@@ -5,3 +5,7 @@
       
     %li
       %a{:href => '/about-me.html'} About Me
+      
+    %li.rss
+      %a{:href => 'http://feeds.feedburner.com/burgestrand', :rel => 'alternate', :type => 'application/rss+xml'}
+        %img{:src => 'http://www.feedburner.com/fb/images/pub/feed-icon16x16.png', :alt => 'rss icon'}
