--- a/_src/stylesheets/layout/_header.scss
+++ b/_src/stylesheets/layout/_header.scss
@@ -32,6 +32,12 @@
       display: inline-block;
       margin-left: 1.2em;
       
+      a img
+      {
+        padding-bottom: 4px;
+        vertical-align: middle;
+      }
+      
       &:first-child { margin-left: 0 }
     }
   }
