Add proper alt attribute to RSS icon image

--- a/_includes/common/navigation.html
+++ b/_includes/common/navigation.html
@@ -6,9 +6,9 @@
     <li>
       <a href="/about-me.html">About Me</a>
     </li>
-    <li class="rss">
+    <li class="icon rss">
       <a href="http://feeds.feedburner.com/burgestrand" rel="alternate" type="application/rss+xml">
-        <img alt="rss icon" src="http://www.feedburner.com/fb/images/pub/feed-icon16x16.png">
+        <img alt="RSS Feed for Kim Burgestrands’ posts" src="http://www.feedburner.com/fb/images/pub/feed-icon16x16.png">
       </a>
     </li>
   </ul>
