Add twitter & github icons to navigation

--- a/_includes/common/navigation.html
+++ b/_includes/common/navigation.html
@@ -6,9 +6,19 @@
     <li>
       <a href="/about-me.html">About Me</a>
     </li>
+    <li class="icon github">
+      <a href="http://github.com/Burgestrand">
+        <img alt="Visit Kim Burgestrand on GitHub" height="17" src="/images/github-17x17.png" width="17">
+      </a>
+    </li>
+    <li class="icon twitter">
+      <a href="http://twitter.com/Burgestrand">
+        <img alt="Follow Kim Burgestrand on Twitter" height="16" src="/images/twitter-16x16.png" width="16">
+      </a>
+    </li>
     <li class="icon rss">
       <a href="http://feeds.feedburner.com/burgestrand" rel="alternate" type="application/rss+xml">
-        <img alt="RSS Feed for Kim Burgestrands’ posts" src="http://www.feedburner.com/fb/images/pub/feed-icon16x16.png">
+        <img alt="RSS Feed for Kim Burgestrands’ posts" height="16" src="http://www.feedburner.com/fb/images/pub/feed-icon16x16.png" width="16">
       </a>
     </li>
   </ul>
