--- a/_src/_includes/common/navigation.haml
+++ b/_src/_includes/common/navigation.haml
@@ -6,6 +6,14 @@
     %li
       %a{:href => '/about-me.html'} About Me
     
+    %li.icon.github
+      %a{:href => 'http://github.com/Burgestrand'}
+        %img{:src => '/images/github-17x17.png', :alt => 'Visit Kim Burgestrand on GitHub', :width => 17, :height => 17}
+    
+    %li.icon.twitter
+      %a{:href => 'http://twitter.com/Burgestrand'}
+        %img{:src => '/images/twitter-16x16.png', :alt => 'Follow Kim Burgestrand on Twitter', :width => 16, :height => 16}
+    
     %li.icon.rss
       %a{:href => 'http://feeds.feedburner.com/burgestrand', :rel => 'alternate', :type => 'application/rss+xml'}
-        %img{:src => 'http://www.feedburner.com/fb/images/pub/feed-icon16x16.png', :alt => 'RSS Feed for Kim Burgestrands’ posts'}
+        %img{:src => 'http://www.feedburner.com/fb/images/pub/feed-icon16x16.png', :alt => 'RSS Feed for Kim Burgestrands’ posts', :width => 16, :height => 16}
