--- a/stylesheets/compiled/main.css
+++ b/stylesheets/compiled/main.css
@@ -250,15 +250,21 @@ article + article {
     font-size: 1.2em;
     left: 0;
     position: absolute; }
+    /* line 30, ../../_src/stylesheets/layout/_header.scss */
+    .main > header nav li.icon {
+      margin-left: 0.2em; }
     /* line 31, ../../_src/stylesheets/layout/_header.scss */
+    .main > header nav li:not(.icon) + li.icon {
+      margin-left: 0.8em; }
+    /* line 34, ../../_src/stylesheets/layout/_header.scss */
     .main > header nav li {
       display: inline-block;
-      margin-left: 1.2em; }
-      /* line 36, ../../_src/stylesheets/layout/_header.scss */
+      margin-left: 1em; }
+      /* line 39, ../../_src/stylesheets/layout/_header.scss */
       .main > header nav li a img {
         padding-bottom: 4px;
         vertical-align: middle; }
-      /* line 41, ../../_src/stylesheets/layout/_header.scss */
+      /* line 44, ../../_src/stylesheets/layout/_header.scss */
       .main > header nav li:first-child {
         margin-left: 0; }
 
