--- a/_includes/index/quote.html
+++ b/_includes/index/quote.html
@@ -7,7 +7,7 @@
 <footer>
   <p>
     Published
-    <time datetime='{{ post.date | date: "%d %b %Y %H:%M:%S UTC" }}' pubdate="pubdate">
+    <time datetime='{{ post.date | date: "%Y-%m-%dT%H:%M:%S" }}' pubdate="pubdate">
       {{ post.date | date: "%d %B %Y" }}
     </time>
     <a href="{{ post.url }}" rel="permalink">permalink</a>
