--- a/_includes/post/image.html
+++ b/_includes/post/image.html
@@ -5,7 +5,7 @@
 <footer>
   <p>
     Published
-    <time datetime='{{ page.date | date: "%d %b %Y %H:%M:%S UTC" }}' pubdate="pubdate">
+    <time datetime='{{ page.date | date: "%Y-%m-%dT%H:%M:%S" }}' pubdate="pubdate">
       {{ page.date | date: "%d %B %Y" }}
     </time>
     <a href="{{ page.url }}" rel="permalink">permalink</a>
