--- a/_src/_includes/index/post.haml
+++ b/_src/_includes/index/post.haml
@@ -2,7 +2,7 @@
   %h1 {{ post.title }}
   %p
     Published
-    %time{:pubdate => 'pubdate', :datetime => '{{ post.date | date: "%d %b %Y %H:%M:%S UTC" }}'}
+    %time{:pubdate => 'pubdate', :datetime => '{{ post.date | date: "%Y-%m-%dT%H:%M:%S" }}'}
       {{ post.date | date: "%d %B %Y" }}
     %a{:rel => 'permalink', :href => "{{ post.url }}"} permalink
 
