Fix HTML entity failure in phpportalen link

--- a/_src/about-me.haml
+++ b/_src/about-me.haml
@@ -22,7 +22,7 @@
     %dd
       <a href="http://github.com/Burgestrand">github</a>,
       <a href="http://twitter.com/Burgestrand">twitter</a>,
-      <a href="http://www.phpportalen.net/profile.php?mode=viewprofile&u=9735">phpportalen</a>,
+      <a href="http://www.phpportalen.net/profile.php?mode=viewprofile&amp;u=9735">phpportalen</a>,
       %a#email email
   
   :javascript
