Add reference to github icon author in tooltip

--- a/_includes/common/navigation.html
+++ b/_includes/common/navigation.html
@@ -8,7 +8,7 @@
     </li>
     <li class="icon github">
       <a href="http://github.com/Burgestrand">
-        <img alt="Visit Kim Burgestrand on GitHub" height="17" src="/images/github-17x17.png" width="17">
+        <img alt="Visit Kim Burgestrand on GitHub (icon by Burin Asavesna: helloburin.com)" height="17" src="/images/github-17x17.png" width="17">
       </a>
     </li>
     <li class="icon twitter">
