--- a/_src/_includes/common/navigation.haml
+++ b/_src/_includes/common/navigation.haml
@@ -8,7 +8,7 @@
     
     %li.icon.github
       %a{:href => 'http://github.com/Burgestrand'}
-        %img{:src => '/images/github-17x17.png', :alt => 'Visit Kim Burgestrand on GitHub', :width => 17, :height => 17}
+        %img{:src => '/images/github-17x17.png', :alt => 'Visit Kim Burgestrand on GitHub (icon by Burin Asavesna: helloburin.com)', :width => 17, :height => 17}
     
     %li.icon.twitter
       %a{:href => 'http://twitter.com/Burgestrand'}
