Remove superfluous %div on %div.main

--- a/_src/_layouts/post.haml
+++ b/_src/_layouts/post.haml
@@ -3,7 +3,7 @@
   %head
     {% include common/head.html %}
   %body
-    %div.main
+    .main
       {% include common/header.html %}
     
       %section
