Add nordic ruby ribbon

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,6 +4,9 @@
     {% include common/head.html %}
   </head>
   <body>
+    <div class="nordic-ruby ribbon">
+      <a href="http://nordicruby.org/">Attending Nordic Ruby</a>
+    </div>
     <div class="main">
       {% include common/header.html %}
       {{ content }}
