--- a/_src/_layouts/page.haml
+++ b/_src/_layouts/page.haml
@@ -3,6 +3,9 @@
   %head
     {% include common/head.html %}
   %body
+    .nordic-ruby.ribbon
+      %a{:href => 'http://nordicruby.org/'} Attending Nordic Ruby
+    
     .main
       {% include common/header.html %}
     
