--- a/_src/stylesheets/main.scss
+++ b/_src/stylesheets/main.scss
@@ -7,6 +7,7 @@ body
 {
   border-top: .3em solid #666;
   color: #333;
+  overflow-x: hidden;
 }
 body > .main { font-size: 1.2em; }
 
@@ -15,3 +16,4 @@ body > .main { font-size: 1.2em; }
 
 @import "layout.scss";
 @import "highlight.scss";
+@import "ribbon.scss";
