Add ribbon as an image instead of CSS (was a nice idea, tho)

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,9 +4,9 @@
     {% include common/head.html %}
   </head>
   <body>
-    <div class="nordic-ruby ribbon">
-      <a href="http://nordicruby.org/">Attending Nordic Ruby</a>
-    </div>
+    <a class="ribbon" href="http://nordicruby.org/">
+      <img height="273" src="/images/ribbon.png" width="272">
+    </a>
     <div class="main">
       {% include common/header.html %}
       {{ content }}
