--- a/_src/_layouts/page.haml
+++ b/_src/_layouts/page.haml
@@ -3,8 +3,8 @@
   %head
     {% include common/head.html %}
   %body
-    .nordic-ruby.ribbon
-      %a{:href => 'http://nordicruby.org/'} Attending Nordic Ruby
+    %a.ribbon{:href => 'http://nordicruby.org/'}
+      %img{:src => '/images/ribbon.png', :width => 272, :height => 273}
     
     .main
       {% include common/header.html %}
