--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@
     {% include common/head.html %}
   </head>
   <body>
-    <a class="ribbon" href="http://nordicruby.org/">
+    <a alt="Attending Nordic Ruby" class="ribbon" href="http://nordicruby.org/">
       <img height="206" src="/images/ribbon.png" width="206">
     </a>
     <div class="main">
