--- a/_src/_layouts/post.haml
+++ b/_src/_layouts/post.haml
@@ -3,7 +3,7 @@
   %head
     {% include common/head.html %}
   %body
-    %a.ribbon{:href => 'http://nordicruby.org/'}
+    %a.ribbon{:href => 'http://nordicruby.org/', :alt => 'Attending Nordic Ruby'}
       %img{:src => '/images/ribbon.png', :width => 206, :height => 206}
     
     .main
