Give another shot at CSS nordic ruby ribbon

--- a/_layouts/image.html
+++ b/_layouts/image.html
@@ -4,9 +4,9 @@
     {% include common/head.html %}
   </head>
   <body>
-    <a alt="Attending Nordic Ruby" class="ribbon" href="http://nordicruby.org/">
-      <img height="206" src="/images/ribbon.png" width="206">
-    </a>
+    <div class="nordic-ruby ribbon">
+      <a href="http://nordicruby.org">Attendee of Nordic Ruby</a>
+    </div>
     <div class="main">
       {% include common/header.html %}
       <section>
