--- a/_src/_layouts/page.haml
+++ b/_src/_layouts/page.haml
@@ -3,8 +3,8 @@
   %head
     {% include common/head.html %}
   %body
-    %a.ribbon{:href => 'http://nordicruby.org/', :alt => 'Attending Nordic Ruby'}
-      %img{:src => '/images/ribbon.png', :width => 206, :height => 206}
+    .nordic-ruby.ribbon
+      %a{:href => 'http://nordicruby.org'} Attendee of Nordic Ruby
     
     .main
       {% include common/header.html %}
