--- a/_src/stylesheets/main.scss
+++ b/_src/stylesheets/main.scss
@@ -13,13 +13,6 @@ body > .main { font-size: 1.2em; }
 .clear { clear: both }
 .hide  { display: none }
 
-/* Ribbon */
-.ribbon
-{
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
 @import "layout.scss";
 @import "highlight.scss";
+@import "ribbon.scss";
