Add license of Fertigo Pro font into CSS file

--- a/_src/stylesheets/_ribbon.scss
+++ b/_src/stylesheets/_ribbon.scss
@@ -1,5 +1,15 @@
 body { overflow-x: hidden; }
 
+/*
+ * Webfont: Fertigo Pro Regular
+ * URL: http://new.myfonts.com/fonts/exljbris/fertigo-pro/regular/
+ * Foundry: exljbris
+ * Copyright: Copyright (c) 2008 by Jos Buivenga. All rights reserved.
+ * License: http://www.myfonts.com/viewlicense?1056
+ * Licensed pageviews: unlimited/month
+ * CSS font-family: FertigoPro-Regular
+ * CSS font-weight: normal
+*/
 @font-face
 {
  font-family: 'Fertigo Pro Regular';
