Adjust wording on About Me-page (should put a new pic up, too ¬¬)

--- a/_src/about-me.haml
+++ b/_src/about-me.haml
@@ -13,7 +13,7 @@
   
   %dl
     %dt Likes
-    %dd readable <em>clean</em> code, learning, teaching
+    %dd <em>beautiful</em> code, teaching, documentation
     
     %dt Does
     %dd web & library development, martial arts, juggling, wake-boarding
@@ -36,7 +36,7 @@
     Stockholm archipelago. I currently live with my girlfriend in Gothenburg,
     where I study computer science at Gothenburg University.
     
-    I love creating beautiful things using code, and here are some of my babies:
+    I love creating sweet things using code, and here are some of my babies:
     
     [Hallon](https://github.com/Burgestrand/Hallon)
     : Ruby bindings for the official [Spotify](http://spotify.com) API.
