--- a/_src/_includes/common/tracker.haml
+++ b/_src/_includes/common/tracker.haml
@@ -1,3 +1,11 @@
-// observerapp.com
-<script type="text/javascript" src="http://www.observerapp.com/record.js"></script>
-<script type="text/javascript">try { Observerapp.record("4c9a9db9d31fc5080e003817"); } catch(e) {};</script>
+// google analytics
+:javascript
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-11712697-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
