Add gauges tracker

--- a/_src/_includes/common/tracker.haml
+++ b/_src/_includes/common/tracker.haml
@@ -1,4 +1,4 @@
-// google analytics
+/ google analytics
 :javascript
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-11712697-1']);
@@ -8,4 +8,18 @@
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+/ gauges
+:javascript
+  (function() {
+    var t   = document.createElement('script');
+    t.type  = 'text/javascript';
+    t.async = true;
+    t.id    = 'gauges-tracker';
+    t.setAttribute('data-site-id',
+                   '4dc1c953613f5d53e8000001');
+    t.src = '//secure.gaug.es/track.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(t, s);
   })();
