--- a/_includes/common/tracker.html
+++ b/_includes/common/tracker.html
@@ -1,4 +1,4 @@
-<!-- / google analytics -->
+<!-- google analytics -->
 <script type="text/javascript">
   //<![CDATA[
     var _gaq = _gaq || [];
@@ -9,6 +9,22 @@
       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+  //]]>
+</script>
+<!-- gauges -->
+<script type="text/javascript">
+  //<![CDATA[
+    (function() {
+      var t   = document.createElement('script');
+      t.type  = 'text/javascript';
+      t.async = true;
+      t.id    = 'gauges-tracker';
+      t.setAttribute('data-site-id',
+                     '4dc1c953613f5d53e8000001');
+      t.src = '//secure.gaug.es/track.js';
+      var s = document.getElementsByTagName('script')[0];
+      s.parentNode.insertBefore(t, s);
     })();
   //]]>
 </script>
