--- a/_src/feed.haml
+++ b/_src/feed.haml
@@ -16,6 +16,7 @@
     %lastBuildDate {{ site.posts.first.date | date: "%d %b %Y %H:%M:%S UTC" }}
     
     {% for post in site.posts %}
+    {% if post.draft == nil %}
     %item
       %title {{ post.title }}
       %link  {{ site.base_uri }}{{ post.url }}
@@ -26,9 +27,10 @@
         {{ post.content | xml_escape }}
         {% endif %}
       %guid {{ site.base_uri }}{{ post.url }}
-      
+    
       %pubDate {{ post.date | date: "%d %b %Y %H:%M:%S UTC" }}
       {% for category in post.categories %}
       %category{:domain => "{{ site.base_uri }}/{{ category }}"} {{category}}
       {% endfor %}
+    {% endif %}
     {% endfor %}
