Adjust font size of gists

--- a/_src/stylesheets/main.scss
+++ b/_src/stylesheets/main.scss
@@ -14,5 +14,6 @@ body > .main { font-size: 1.2em; }
 .hide  { display: none }
 
 @import "layout.scss";
+@import "gist.scss";
 @import "highlight.scss";
 @import "ribbon.scss";
