--- a/_src/about-me.haml
+++ b/_src/about-me.haml
@@ -8,48 +8,48 @@
 %article{:class => 'about-me'}
   %header
     %h1 Kim Burgestrand
-  
-  %img.photo{:src => '/images/me.jpg', :alt => 'Me!'}
-  
+
+  %img.photo{src: 'http://www.gravatar.com/avatar/b67b73b5b1fd84119ec788b1c3df02ad.png?s=234', alt: 'Me!', width: 234}
+
   %dl
     %dt Likes
     %dd <em>beautiful</em> code, teaching, documentation
-    
+
     %dt Does
     %dd web & library development, martial arts, juggling, wake-boarding
-    
+
     %dt Exists
     %dd
       <a href="http://github.com/Burgestrand">github</a>,
       <a href="http://twitter.com/Burgestrand">twitter</a>,
       <a href="http://www.phpportalen.net/profile.php?mode=viewprofile&amp;u=9735">phpportalen</a>,
       %a#email email
-  
+
   :javascript
     var prefix = "mailto:"
     var at = "@"
     document.getElementById("email").setAttribute("href", prefix + "kim" + at + "burgestrand.se")
-  
+
   .clear
   :markdown
     I’m a Swedish programmer brought up on an island named [Resarö][] in the
     Stockholm archipelago. I currently live with my girlfriend in Gothenburg,
     where I study computer science at Gothenburg University.
-    
+
     I love creating sweet things using code, and here are some of my babies:
-    
+
     [Hallon](https://github.com/Burgestrand/Hallon)
     : Ruby bindings for the official [Spotify](http://spotify.com) API.
-    
+
     [Dimma](https://github.com/Burgestrand/Dimma)
     : A ruby library for the [Beacon](http://beaconpush.com/) REST API.
-    
+
     [vlad-nginx](https://github.com/Burgestrand/vlad-nginx)
     : NGiNX recipe for Vlad the Deployer.
-    
+
     [radiofy.se](http://beta.radiofy.se/) <small>(co-developer)</small>
     : A website built around a service where we aggregate data from Swedish radio
       stations and put their music into (automatically updated) Spotify playlists
       grouped by channel. <small>(built using ruby on rails)</small>
-    
+
     [Resarö]: http://bit.ly/aPtQxr
