--- a/_includes/common/head.html
+++ b/_includes/common/head.html
@@ -2,3 +2,6 @@
 <link href="/stylesheets/compiled/main.css" rel="stylesheet">
 <link href="http://feeds.feedburner.com/burgestrand" rel="alternate" title="RSS" type="application/rss+xml">
 <title>{{ page.title }} {{ site.title }}</title>
+<!--[lt IE 9]>
+  <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
