--- a/_src/_includes/common/head.haml
+++ b/_src/_includes/common/head.haml
@@ -2,3 +2,6 @@
 %link{:href => '/stylesheets/compiled/main.css', :rel => 'stylesheet'}
 %link{:href => "http://feeds.feedburner.com/burgestrand", :rel => 'alternate', :type => 'application/rss+xml', :title => 'RSS'}
 %title {{ page.title }} {{ site.title }}
+
+/[lt IE 9]
+  %script{:src => "//html5shim.googlecode.com/svn/trunk/html5.js"}
