Remove phpportalen link from About Me-page

--- a/_src/about-me.haml
+++ b/_src/about-me.haml
@@ -22,13 +22,13 @@
     %dd
       <a href="http://github.com/Burgestrand">github</a>,
       <a href="http://twitter.com/Burgestrand">twitter</a>,
-      <a href="http://www.phpportalen.net/profile.php?mode=viewprofile&amp;u=9735">phpportalen</a>,
       %a#email email
 
   :javascript
     var prefix = "mailto:"
     var at = "@"
-    document.getElementById("email").setAttribute("href", prefix + "kim" + at + "burgestrand.se")
+    var mail = document.getElementById("email")
+    email.setAttribute("href", prefix + "kim" + at + "burgestrand.se")
 
   .clear
   :markdown
