Update about-me to not say I’m studying at GU

--- a/_src/about-me.haml
+++ b/_src/about-me.haml
@@ -32,11 +32,13 @@
 
   .clear
   :markdown
-    I’m a Swedish programmer brought up on an island named [Resarö][] in the
-    Stockholm archipelago. I currently live with my girlfriend in Gothenburg,
-    where I study computer science at Gothenburg University.
+    I’m a Swedish developer, brought up on an island named [Resarö][] in the
+    Stockholm archipelago. I currently live with my girlfriend Elin in Gothenburg,
+    where I work at this awesome lil' place called [Elabs](http://elabs.se/).
 
-    I love creating sweet things using code, and here are some of my babies:
+    I try to avoid defining myself as a programmer. I do enjoy creating things, and
+    code just happens to be one of the ways I do it with. Here’s some cody thingies
+    I’ve made:
 
     [Hallon](https://github.com/Burgestrand/Hallon)
     : Ruby bindings for the official [Spotify](http://spotify.com) API.
