Add STOP CENSORSHIP header

--- a/_includes/common/header.html
+++ b/_includes/common/header.html
@@ -1,4 +1,7 @@
 <header>
+  <a class="sopa" href="http://sopastrike.com/strike/">
+    Stop Censorship!
+  </a>
   <hgroup>
     <h1>Kim Burgestrand</h1>
     <h2>… and his miscellaneous freaky — but brilliant — ideas and thoughts.</h2>
