--- a/_src/_includes/common/header.haml
+++ b/_src/_includes/common/header.haml
@@ -1,4 +1,7 @@
 %header
+  %a.sopa{href:'http://sopastrike.com/strike/'}
+    Stop Censorship!
+
   %hgroup
     %h1 Kim Burgestrand
     %h2 … and his miscellaneous freaky — but brilliant — ideas and thoughts.
